--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@
 cmake_minimum_required(VERSION 3.12)
 set(project_name "FeedbackDelay")
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules ${CMAKE_MODULE_PATH})
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+
+# compile commands
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Load cpm
 include(cmake_modules/CPM.cmake)
