ci: Make less strict

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ message(STATUS "Install directory set to: ${CMAKE_INSTALL_PREFIX}")
 option(SUPERNOVA "Build plugins for supernova" ON)
 option(SCSYNTH "Build plugins for scsynth" ON)
 option(NATIVE "Optimize for native architecture" ON)
-option(STRICT "Use strict warning flags" ON)
+option(STRICT "Use strict warning flags" OFF)
 option(NOVA_SIMD "Build plugins with nova-simd support." ON)
 
 ####################################################################################################
