--- a/.github/workflows/pluginbuild.yml
+++ b/.github/workflows/pluginbuild.yml
@@ -73,6 +73,7 @@ jobs:
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: ${{ env.INSTALL_PATH }}/${{ env.ARCHIVE_NAME }}
         prerelease: true
         body: ""
