--- a/.github/workflows/pluginbuild.yml
+++ b/.github/workflows/pluginbuild.yml
@@ -1,80 +1,95 @@
+name: Build Plugin
+
+# Set your project name here
+env:
+  PROJECT_NAME: "FeedbackDelay"
+
 on:
   push:
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch: # Allow manual triggering for testing
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.name }}
-#   You may need to uncomment this part if using granular workflows.
-#   permissions:
-#     content: write
+    timeout-minutes: 20
     strategy:
       matrix:
-        include:
-          - name: macOS
-            os: macos-latest
+        os: [macos-14, macos-13, windows-latest]
 
-          - name: Linux-x64
-            os: ubuntu-latest
-
-          - name: Windows-x64
-            os: windows-latest
-
-    env:
-      SC_PATH: ${{ github.workspace }}/supercollider
-      BUILD_PATH: ${{ github.workspace }}/build
-      INSTALL_PATH: ${{ github.workspace }}/build/Install
-      ARCHIVE_NAME: FeedbackDelay-${{ matrix.name }}.zip
     steps:
-    - name: Checkout FeedbackDelay
-      uses: actions/checkout@v3
-
-    - name: Checkout SuperCollider
-      uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
       with:
-        repository: supercollider/supercollider
-        path: ${{ env.SC_PATH }}
-        ref: main
+        submodules: 'recursive'
 
-      # Create a separate build directory
-      # We'll use this as our working directory for subsequent commands
-    - name: Create Build Environment
+    - name: Get SuperCollider source
+      timeout-minutes: 8
+      id: git_clone
+      continue-on-error: true
+      run: git clone --depth 1 https://github.com/supercollider/supercollider.git ${{ github.workspace }}/supercollider
+
+    - name: Fallback SuperCollider download
+      if: steps.git_clone.outcome == 'failure'
+      timeout-minutes: 5
+      shell: pwsh
+      run: |
+        Write-Host "Git clone failed, downloading zip..."
+        Invoke-WebRequest -Uri "https://github.com/supercollider/supercollider/archive/refs/heads/main.zip" -OutFile "sc.zip"
+        Expand-Archive -Path "sc.zip" -DestinationPath "."
+        Move-Item "supercollider-main" "${{ github.workspace }}/supercollider"
+
+    - name: Create build environment
+      run: cmake -E make_directory ${{ github.workspace }}/build
+
+    - name: Configure CMake (Unix)
+      if: matrix.os != 'windows-latest'
       shell: bash
-      run: cmake -E make_directory $BUILD_PATH
+      working-directory: ${{ github.workspace }}/build
+      run: cmake .. -DCMAKE_BUILD_TYPE='Release' -DSC_PATH=${{ github.workspace }}/supercollider -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/install
 
-    - name: Configure CMake
+    - name: Configure CMake (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      working-directory: ${{ github.workspace }}\build
+      run: cmake .. -DCMAKE_BUILD_TYPE='Release' -DSC_PATH="${{ github.workspace }}\supercollider" -DCMAKE_INSTALL_PREFIX="${{ github.workspace }}\install"
+
+    - name: Build plugin
+      working-directory: ${{ github.workspace }}/build
+      run: cmake --build . --config "Release"
+
+    - name: Install plugin to bundle directory
+      working-directory: ${{ github.workspace }}/build
+      run: cmake --install . --config "Release"
+
+    - name: Create plugin bundle (macOS-14)
+      if: matrix.os == 'macos-14'
       shell: bash
-      working-directory: ${{ env.BUILD_PATH }}
-      run: cmake .. -DCMAKE_BUILD_TYPE='Release' -DSC_PATH="$SC_PATH" -DCMAKE_INSTALL_PREFIX="$INSTALL_PATH"
+      working-directory: ${{ github.workspace }}/install
+      run: |
+        # Create zip from the installed plugin folder
+        zip -r ${{ github.workspace }}/build/${{ env.PROJECT_NAME }}-macOS-ARM.zip .
 
-    - name: Build
+    - name: Create plugin bundle (macOS-13)
+      if: matrix.os == 'macos-13'
       shell: bash
-      working-directory: ${{ env.BUILD_PATH }}
-      env:
-        CMAKE_BUILD_PARALLEL_LEVEL: 4
-      run: cmake --build . --config "Release" --target install
+      working-directory: ${{ github.workspace }}/install
+      run: |
+        # Create zip from the installed plugin folder
+        zip -r ${{ github.workspace }}/build/${{ env.PROJECT_NAME }}-macOS-Intel.zip .
 
-      # Gather all files in a zip
-    - name: Zip up build (Unix)
-      if: runner.os != 'Windows'
-      shell: bash
-      working-directory: ${{ env.INSTALL_PATH }}
-      run: zip -r "$ARCHIVE_NAME" "FeedbackDelay"
+    - name: Create plugin bundle (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      working-directory: ${{ github.workspace }}\install
+      run: |
+        # Create zip from the installed plugin folder
+        Compress-Archive -Path "." -DestinationPath "${{ github.workspace }}\build\${{ env.PROJECT_NAME }}-Windows.zip" -Force
 
-      # Gather all files in a zip
-    - name: Zip up build (Windows)
-      if: runner.os == 'Windows'
-      shell: bash
-      working-directory: ${{ env.INSTALL_PATH }}
-      run: 7z a "$ARCHIVE_NAME" -tzip "FeedbackDelay"
-
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    # Store as artifacts - works for both manual runs and tag pushes
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{ env.INSTALL_PATH }}/${{ env.ARCHIVE_NAME }}
-        prerelease: true
-        body: ""
-        tag: ${{ github.ref }}
+        name: ${{ env.PROJECT_NAME }}-${{ matrix.os }}
+        path: ${{ github.workspace }}/build/${{ env.PROJECT_NAME }}-*.zip
