--- a/.github/workflows/pluginbuild.yml
+++ b/.github/workflows/pluginbuild.yml
@@ -93,3 +93,69 @@ jobs:
       with:
         name: ${{ env.PROJECT_NAME }}-${{ matrix.os }}
         path: ${{ github.workspace }}/build/${{ env.PROJECT_NAME }}-*.zip
+  release:
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+
+        # Create release
+        - name: Create GitHub Release
+          id: create_release
+          uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: ${{ github.ref_name }}
+            release_name: ${{ github.ref_name }}
+            draft: false
+            prerelease: false
+
+      # Download assets from build job
+        - name: Download macOS ARM artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: FeedbackDelay-macos-14
+            path: artifacts/
+
+        - name: Download macOS Intel artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: FeedbackDelay-macos-13
+            path: artifacts/
+
+        - name: Download Windows artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: FeedbackDelay-windows-latest
+            path: artifacts/
+
+        # Upload all assets
+        - name: Upload macOS ARM asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: artifacts/FeedbackDelay-macOS-ARM.zip
+            asset_name: FeedbackDelay-macOS-ARM.zip
+            asset_content_type: application/zip
+
+        - name: Upload macOS Intel asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: artifacts/FeedbackDelay-macOS-Intel.zip
+            asset_name: FeedbackDelay-macOS-Intel.zip
+            asset_content_type: application/zip
+
+        - name: Upload Windows asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: artifacts/FeedbackDelay-Windows.zip
+            asset_name: FeedbackDelay-Windows.zip
+            asset_content_type: application/zip
